Fixed alignments

--- a/src/components/SocialsPanel.scss
+++ b/src/components/SocialsPanel.scss
@@ -45,6 +45,7 @@
 
 @media (min-width: 475px) {
     .socials-panel {
+        align-items: center;
         flex-direction: row;
         padding: 0.5rem 3rem;
 
@@ -59,6 +60,7 @@
 
 @media (min-width: 640px) {
     .socials-panel {
+        align-items: center;
         padding: 0.5rem 3rem;
 
         .social-left-side {
